# Q-sage

./: .gitignore  Q-sage.py  README.md  pyproject.toml
Benchmarks/: playable_qbf.json
Benchmarks/positional_goldens/cp/: browne_5x5_07_cp.qcir  browne_5x5_09_cp.qcir  hein_02_5x5-11_cp.qcir  hein_02_5x5-13_cp.qcir  hein_03_6x6-13_cp.qcir  hein_03_6x6-15_cp.qcir  hein_04_3x3-03_cp.qcir  hein_04_3x3-05_cp.qcir  hein_05_6x6-11_cp.qcir  hein_05_6x6-13_cp.qcir  hein_06_4x4-11_cp.qcir  hein_06_4x4-13_cp.qcir  hein_07_4x4-07_cp.qcir  hein_07_4x4-09_cp.qcir  hein_08_5x5-09_cp.qcir  hein_08_5x5-11_cp.qcir  hein_09_4x4-05_cp.qcir  hein_09_4x4-07_cp.qcir  hein_10_5x5-11_cp.qcir  hein_10_5x5-13_cp.qcir  hein_11_5x5-09_cp.qcir  hein_11_5x5-11_cp.qcir  hein_12_4x4-05_cp.qcir  hein_12_4x4-07_cp.qcir  hein_13_5x5-07_cp.qcir  hein_13_5x5-09_cp.qcir  hein_14_5x5-07_cp.qcir  hein_14_5x5-09_cp.qcir  hein_15_5x5-13_cp.qcir  hein_15_5x5-15_cp.qcir  hein_16_5x5-11_cp.qcir  hein_16_5x5-13_cp.qcir  hein_17_6x6-13_cp.qcir  hein_17_6x6-15_cp.qcir  hein_18_7x7-13_cp.qcir  hein_18_7x7-15_cp.qcir  (+4 more)
docs/: CERTIFICATES.md  DESIGN.md  ENCODINGS.md  ISSUES.md  POSITIONAL_RESULTS.md  SCRATCH.md  SCRATCH_DUAL_RESULTS.json  SCRATCH_DUAL_RESULTS.md  _partial_bench.json  _timeout_keys.json  _timeout_keys_hex.json  _timeout_keys_nonhex.json
legacy/: Q-sage.py  README.md  interactive_play.py
legacy/other_scripts/: create_dataframe.py
legacy/parse/: parser.py
legacy/q_encodings/: compact_positional.py  encoder.py
qsage/: __init__.py
qsage/cli/: main.py
qsage/encode/: __init__.py  bwnib.py  golden_map.py  normalize.py  positional.py  qcir_io.py  qdimacs.py
qsage/games/: __init__.py
qsage/parse/: __init__.py  ast_nodes.py  bddl.py  positional.py  util.py
qsage/play/: __init__.py  cli_helpers.py
qsage/scratch/: README.md  __init__.py  circuit.py  grid.py  hex.py  parse_bddl.py  parse_pg.py
qsage/solve/: __init__.py  bloqqer_caqe.py  docker_run.py  paper_checks.py  qubi.py  result.py
qsage/strategy/: __init__.py  depqbf.py  sqval.py
qsage/web/: __init__.py  catalog.py  cert_session.py  grid_session.py  hex_session.py  partial_certs.py  server.py
scripts/: build_qubi_docker.sh  build_qubi_macos.sh  generate_partial_certs.py  generate_positional_goldens.py  run_all_paper_benchmarks.py  run_paper_checks.py  run_positional_paper_checks.py  run_scratch_dual_check.py  scan_playable_qbf.py  setup_depqbf_cert.sh  setup_sqval.sh
solvers/depqbf_cert/: README.md
tests/encode/: test_bwnib_goldens.py  test_normalize_qdimacs.py  test_positional_goldens.py
tests/parse/: test_bddl_benchmarks.py  test_positional_benchmarks.py
tests/scratch/: conftest_oracle.py  test_circuit.py  test_grid_correctness.py  test_hex_correctness.py  test_legacy_encode_untouched.py  test_paper_tables.py  test_parse.py  test_qcir_match.py  test_standalone_imports.py
tests/solve/: test_positional_agreement.py  test_qubi_smoke.py
tests/strategy/: test_certs_hybrid.py  test_sqval_demo.py
tests/web/: test_all_instances_simulation.py  test_grid_session.py  test_play_simulation.py
(+102 files in other folders)
