[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsage"
version = "0.2.0"
description = "QBF encodings for 2-player board games (Hex, Breakthrough, HTTT, …)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Q-sage contributors" }]
dependencies = [
    "lark>=1.1",
    "networkx>=3.0",  # legacy bwnib path (stuttering bounds)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
play = [
    "python-sat>=0.1.8",  # general_interactive_play.py (certificate play)
]
viz = [
    "pyvis>=0.3",  # optional QCIR circuit visualization
]
web = [
    # reserved for issue #3 localhost UI
]
all = [
    "qsage[dev,play,viz]",
]

[project.scripts]
qsage = "qsage.cli.main:main"

[tool.setuptools.packages.find]
include = ["qsage*"]

[tool.setuptools.package-data]
qsage = ["parse/grammars/*.lark", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
